--- a/mobile_portal/mobile_portal/templates/contact/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/contact/base.xhtml
@@ -2,6 +2,6 @@
 
 {% block breadcrumbs %}
 {{ block.super }}
-    <li><a href="{% url contact_index %}">Contact search</a></li>
+    <li><a href="{% url contact_index %}">Contacts</a></li>
 {% endblock %}
 
