--- a/mobile_portal/mobile_portal/site-media/css/core/index.css
+++ b/mobile_portal/mobile_portal/site-media/css/core/index.css
@@ -1,3 +1,28 @@
+ul.icon-menu {
+    list-style:none;
+    margin-top:0;
+    padding:0;
+    padding-bottom:6px;
+}
+
+ul.icon-menu li {
+    margin-left:0px;
+    margin-top:0px;
+    background-repeat:no-repeat;
+    overflow:hide;
+    float:left;
+}
+
+ul.icon-menu li a {
+    width:65px;
+    height:2em;
+    padding:5px;
+    padding-top:75px;
+    text-align:center;
+    display:block;
+    text-decoration:none;
+}
+
 li#menu-contact {
     background-image:url('../../png/contact.png');
 }
