--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css"/>
     {% endblock %}
     
-
+{% if smart or desktop %}
     <script type="text/javascript">
         require_location = {{ require_location|yesno:"true,false" }};
         site_media = "{{ MEDIA_URL }}";
@@ -16,8 +16,9 @@
     <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js" type="text/javascript"></script>    
     <script src="{{ MEDIA_URL }}js/gears_init.js" type="text/javascript"></script>
     <script src="{{ MEDIA_URL }}js/geolocation.js" type="text/javascript"></script>
-    <script src="{{ MEDIA_URL }}openlayers/OpenLayers.js" type="text/javascript"></script>
-    <script src="{{ MEDIA_URL }}openlayers/OpenLayers-osm.js" type="text/javascript"></script>
+{% endif %}
+    <!--<script src="{{ MEDIA_URL }}openlayers/OpenLayers.js" type="text/javascript"></script>
+    <script src="{{ MEDIA_URL }}openlayers/OpenLayers-osm.js" type="text/javascript"></script>-->
     
     {% for path in device_specific_media.js %}
     <script src="{{ MEDIA_URL }}{{ path }}" type="text/javascript"></script>    
@@ -53,20 +54,19 @@
         <img src="{{ MEDIA_URL }}png/crest.png" style="float:right;" alt=""/>
 {% endif %}
     </div>
-    
-    <div class="container">   
-    
+
+{% if not touch %}    
     <ol class="breadcrumbs">
 {% block breadcrumbs %}
         <li><a href="{% url core_index %}">Home</a></li>
 {% endblock %}
     </ol>
+{% endif %}
 
     <div class="content">
 {% block content %}
 {% endblock %}
 
-    </div>
     </div>
   </body>
 </html>
