Corrected/hidden links on front page.

--- a/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -25,10 +25,10 @@
 
     <div class="section">
         <ul>
-            <li><a href="/help/">Using this site</a></li>
-            <li><a href="/help/">Customise this page</a></li>
-            <li><a href="/help/">Location-finding preferences</a></li>
-            <li><a href="/help/">Legal</a></li>
+{#            <li><a href="/help/">Using this site</a></li>#}
+{#            <li><a href="/customise/">Customise this page</a></li>#}
+            <li><a href="{% url core_update_location %}">Location-finding preferences</a></li>
+{#            <li><a href="/legal/">Legal</a></li>#}
 
         </ul>
     </div>
