Fixed missing update location link.

--- a/mobile_portal/mobile_portal/templates/core/update_location.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/update_location.xhtml
@@ -61,8 +61,9 @@
         </script>
 {% endif %}
 {% endif %}
+<p id="location_update"> </p>
         <script type="text/javascript">
-            if (navigator.geolocation.getCurrentPosition)
+            if (navigator.geolocation.getCurrentPosition || google.gears)
                 $('#location_update').append(' <a href="#" onclick="javascript:requestPosition();">Determine automatically<\/a>');
         </script>
         
