Fiddled with presentation for iPhones.

--- a/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -24,7 +24,7 @@
     <hr/>
 
     <div class="section">
-        <ul>
+        <ul class="ml">
 {#            <li><a href="/help/">Using this site</a></li>#}
 {#            <li><a href="/customise/">Customise this page</a></li>#}
             <li><a href="{% url core_update_location %}">Location-finding preferences</a></li>
