--- a/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
@@ -4,7 +4,7 @@
 {% block content %}
 <h1>Podcasts</h1>
 
-{% if show_itunesu_link %} {# device|device_has_parent:"apple_iphone_ver1" and #}
+{% if device|device_has_parent:"apple_iphone_ver1" and show_itunesu_link %} {#  #}
 <div style="background-color:#002341; margin:1em; padding:0.5em; color:#ffffff; font-size:120%" id="itunesu_link_div">
 
 <p>It looks like you're using an {% if device|device_has_parent:"apple_ipod_touch_ver1" %}iPod Touch{% else %}iPhone{% endif %}!</p>
@@ -38,7 +38,7 @@
     <a href="{% url podcasts_top_downloads %}">Top downloads from iTunesU</a>
 </p>
 
-<ul class="category_list">
+<ul class="category_list ml">
 {% for category in categories %}
     <li><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
 {% endfor %}
