--- a/mobile_portal/mobile_portal/templates/webcams/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/webcams/index.xhtml
@@ -4,7 +4,7 @@
 
 <h1>Webcams</h1>
 
-<ul>
+<ul class="ml">
 {% for webcam in webcams %}
     <li>
         <a href="{% url webcams_webcam webcam.slug %}">{{ webcam.title }}</a>
