--- a/mobile_portal/mobile_portal/templates/rss/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/rss/base.xhtml
@@ -2,7 +2,9 @@
 
 {% block breadcrumbs %}
 {{ block.super }}
-    <li><a href="{% url rss_index %}">News</a></li>
+            <li><a href="{% url rss_index %}">
+                <img src="{{ MEDIA_URL }}png/rss-bc.png" alt="News"/>
+            </a></li>
 {% endblock %}
 
 {% block stylesheets %}
