--- a/mobile_portal/mobile_portal/templates/webcams/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/webcams/base.xhtml
@@ -2,6 +2,8 @@
 
 {% block breadcrumbs %}
 {{ block.super }}
-    <li><a href="{% url webcams_index %}">Webcams</a></li>
+            <li><a href="{% url webcams_index %}">
+                <img src="{{ MEDIA_URL }}png/webcams-bc.png" alt="Webcams"/>
+            </a></li>
 {% endblock %}
 
