--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -13,6 +13,7 @@
     <script type="text/javascript">
         require_location = {{ require_location|yesno:"true,false" }};
         site_media = "{{ MEDIA_URL }}";
+        base = "{% url core_index %}";
     </script>
     <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js" type="text/javascript"></script>    
     <script src="{{ MEDIA_URL }}js/gears_init.js" type="text/javascript"></script>
