Added new icons for maps and results.

--- a/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
+++ b/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
@@ -33,7 +33,7 @@ li#menu-olis {
 }
 
 li#menu-maps {
-    background-image:url('../../png/podcasts.png');
+    background-image:url('../../png/maps.png');
 }
 
 li#menu-emergency {
@@ -53,6 +53,6 @@ li#menu-rss {
 }
 
 li#menu-results {
-    background-image:url('../../png/rss.png');
+    background-image:url('../../png/results.png');
 }
 
