wording change for lack of bus time info

--- a/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
@@ -38,7 +38,7 @@
     </tbody>
 </table>
 {% else %}
-<p>There is no bus time information for this stop.</p>
+<p>Sorry, there is currently no bus time information for this stop.</p>
 {% endif %}
 
 {% map entity.location %}
