Playing with CSS of maps

--- a/mobile_portal/mobile_portal/templates/maps/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/index.xhtml
@@ -1,10 +1,13 @@
 {% extends "maps/base.xhtml" %}
 
 {% block content %}
-<h1>Maps</h1>
+
+<div class="section-nopad">
+<h2 class="section-header">Maps</h2>
 
 <p>
     <a href="{% url maps_nearby_list %}">Things near me</a>
 </p>
+</div>
 
 {% endblock %}
